[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64"]

[project]
name = "aiq_simple_calculator"
dynamic = ["version"]
dependencies = [
  "aiqtoolkit[langchain]",
]
requires-python = ">=3.11,<3.13"
description = "Simple Calculator AIQ Toolkit example"
keywords = ["ai", "rag", "agents"]
classifiers = ["Programming Language :: Python"]

[project.entry-points.'aiq.components']
aiq_simple_calculator = "aiq_simple_calculator.register"
